// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parsePlanTaskVerifyOnly > regression: existing plan corpus (no markers) is inert > 2026-06-30-daemon-owner-gate.md: zero verify-only true entries, unchanged parsePlanTaskPaths > parsePlanTaskPaths 1`] = `
[
  [
    "1",
    [
      "src/conductor/src/engine/owner-gate/identity.ts",
    ],
  ],
  [
    "2",
    [
      "identity.test.ts",
      "identity.ts",
    ],
  ],
  [
    "3",
    [
      "identity.test.ts",
      "identity.ts",
    ],
  ],
  [
    "4",
    [
      "identity.test.ts",
      "identity.ts",
    ],
  ],
  [
    "5",
    [
      "identity.test.ts",
      "identity.ts",
    ],
  ],
  [
    "6",
    [
      "provenance.test.ts",
      "provenance.ts",
    ],
  ],
  [
    "7",
    [
      "provenance.test.ts",
      "provenance.ts",
    ],
  ],
  [
    "8",
    [
      "merge-time.test.ts",
      "merge-time.ts",
    ],
  ],
  [
    "9",
    [
      "gate.test.ts",
      "gate.ts",
    ],
  ],
  [
    "10",
    [
      "gate.test.ts",
      "gate.ts",
    ],
  ],
  [
    "11",
    [
      "daemon-backlog.ts",
      "test/engine/daemon-backlog.test.ts",
    ],
  ],
  [
    "12",
    [
      "daemon-backlog.test.ts",
      "daemon-backlog.ts",
    ],
  ],
  [
    "13",
    [
      "daemon-backlog.test.ts",
      "daemon-backlog.ts",
    ],
  ],
  [
    "14",
    [
      "daemon-backlog.test.ts",
      "daemon-backlog.ts",
    ],
  ],
  [
    "15",
    [
      "src/conductor/src/engine/engineer/intake-marker.ts",
    ],
  ],
  [
    "16",
    [
      "src/conductor/src/engine/engineer/land-spec.ts",
    ],
  ],
  [
    "17",
    [
      "src/conductor/src/engine/config.ts",
      "src/conductor/src/types/config.ts",
    ],
  ],
  [
    "18",
    [
      "daemon-backlog.test.ts",
      "identity.test.ts",
    ],
  ],
  [
    "19",
    [
      "CHANGELOG.md",
      "marker/config",
    ],
  ],
]
`;

exports[`parsePlanTaskVerifyOnly > regression: existing plan corpus (no markers) is inert > 2026-07-03-daemon-issue-priority-scheduling.md: zero verify-only true entries, unchanged parsePlanTaskPaths > parsePlanTaskPaths 1`] = `
[
  [
    "1",
    [
      "src/conductor/src/engine/backlog-priority.ts",
      "src/conductor/test/backlog-priority.test.ts",
    ],
  ],
  [
    "2",
    [
      "src/conductor/src/engine/backlog-priority.ts",
      "src/conductor/test/backlog-priority.test.ts",
    ],
  ],
  [
    "3",
    [
      "backlog-priority.test.ts",
      "backlog-priority.ts",
    ],
  ],
  [
    "4",
    [
      "backlog-priority.test.ts",
    ],
  ],
  [
    "5",
    [
      "backlog-priority.test.ts",
      "backlog-priority.ts",
    ],
  ],
  [
    "6",
    [
      "backlog-priority.test.ts",
    ],
  ],
  [
    "7",
    [
      "backlog-priority.test.ts",
      "backlog-priority.ts",
    ],
  ],
  [
    "8",
    [
      "backlog-priority.test.ts",
      "backlog-priority.ts",
    ],
  ],
  [
    "9",
    [
      "backlog-priority.test.ts",
      "backlog-priority.ts",
    ],
  ],
  [
    "10",
    [
      "src/conductor/test/backlog-priority.smoke.test.ts",
    ],
  ],
  [
    "11",
    [
      "src/conductor/src/engine/daemon-work-source.ts",
      "src/conductor/test/daemon-work-source.test.ts",
    ],
  ],
  [
    "12",
    [
      "src/conductor/test/daemon.test.ts",
    ],
  ],
  [
    "13",
    [
      "src/conductor/src/daemon-cli.ts",
    ],
  ],
  [
    "14",
    [
      "src/conductor/src/engine/daemon-dashboard.ts",
      "src/conductor/test/daemon-dashboard.test.ts",
    ],
  ],
  [
    "15",
    [],
  ],
  [
    "16",
    [
      "CHANGELOG.md",
      "README.md",
      "src/conductor/README.md",
    ],
  ],
]
`;

exports[`parsePlanTaskVerifyOnly > regression: existing plan corpus (no markers) is inert > 2026-07-05-changelog-migration-block-enforcement.md: zero verify-only true entries, unchanged parsePlanTaskPaths > parsePlanTaskPaths 1`] = `
[
  [
    "1",
    [],
  ],
  [
    "2",
    [],
  ],
  [
    "3",
    [],
  ],
  [
    "4",
    [],
  ],
  [
    "5",
    [],
  ],
  [
    "6",
    [],
  ],
  [
    "7",
    [],
  ],
  [
    "8",
    [],
  ],
  [
    "9",
    [],
  ],
  [
    "10",
    [],
  ],
  [
    "11",
    [],
  ],
  [
    "12",
    [
      "agents/",
      "skills/",
    ],
  ],
]
`;

exports[`parsePlanTaskVerifyOnly > regression: existing plan corpus (no markers) is inert > 2026-07-12-rtk-hook-preservation.md: zero verify-only true entries, unchanged parsePlanTaskPaths > parsePlanTaskPaths 1`] = `
[
  [
    "T0",
    [],
  ],
  [
    "T1",
    [],
  ],
  [
    "T2",
    [],
  ],
  [
    "T3",
    [],
  ],
  [
    "T4",
    [],
  ],
  [
    "T5",
    [
      "test/test_harness_integrity.sh",
      "~/.claude",
    ],
  ],
]
`;
